logs/paab.policy.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/paab'...
Listing './lib/python3.5/site-packages/paab/policy'...
Compiling './lib/python3.5/site-packages/paab/policy/__init__.py'...
***   File "./lib/python3.5/site-packages/paab/policy/__init__.py", line 59
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/paab/policy/actions'...
Listing './lib/python3.5/site-packages/paab/policy/exportimport'...
Listing './lib/python3.5/site-packages/paab/policy/profiles'...
Listing './lib/python3.5/site-packages/paab/policy/profiles/default'...
Listing './lib/python3.5/site-packages/paab/policy/profiles/default/types'...
Listing './lib/python3.5/site-packages/paab/policy/skins'...
Listing './lib/python3.5/site-packages/paab/policy/skins/paab_policy'...
Compiling './lib/python3.5/site-packages/paab/policy/skins/paab_policy/getHowManyBlogItems.py'...
***   File "./lib/python3.5/site-packages/paab/policy/skins/paab_policy/getHowManyBlogItems.py", line 19
    return l
           ^
SyntaxError: 'return' outside function

Compiling './lib/python3.5/site-packages/paab/policy/skins/paab_policy/getLastUpdate.py'...
***   File "./lib/python3.5/site-packages/paab/policy/skins/paab_policy/getLastUpdate.py", line 19
    return result
                 ^
SyntaxError: 'return' outside function

Listing './lib/python3.5/site-packages/paab/policy/tests'...
Listing './lib/python3.5/site-packages/paab.policy-0.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
